--- a/markdown.css
+++ b/markdown.css
@@ -51,7 +51,7 @@
   -webkit-text-size-adjust: 100%;
   color: #24292e;
   line-height: 1.5;
-  font-family: 'Sarasa Mono SC';
+  font-family: 'Sarasa Mono SC','Microsoft YaHei UI';
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
