--- a/markdown.css
+++ b/markdown.css
@@ -143,7 +143,7 @@ body, button, input, select, textarea {
 }
 
 body {
-  font-family: "Microsoft Yahei", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
+  font-family: "Sarasa Mono SC","等距更纱黑体 SC","Microsoft YaHei UI", "Microsoft Yahei", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
 }
 
 h1, h2, h3, h4, h5, h6 {
