--- a/markdown.css
+++ b/markdown.css
@@ -146,6 +146,8 @@ body {
   font-family: "TimesNewRomanPS-ItalicMT", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
   -webkit-font-smoothing: initial;
   font-weight: 100;
+  color: var(--text-color);
+  line-height: 1.35; 
 }
 
 h1, h2, h3, h4, h5, h6  {
