--- a/markdown.css
+++ b/markdown.css
@@ -148,6 +148,8 @@ body {
   font-weight: 100;
   color: var(--text-color);
   line-height: 1.35; 
+  font-variant-numeric: lining-nums;
+  margin-bottom: 1em;
 }
 
 h1, h2, h3, h4, h5, h6  {
