--- a/markdown.css
+++ b/markdown.css
@@ -152,7 +152,7 @@ body {
 }*/
 
 
-h1, h2, h3, h4, h5, h6, body {
+h1, h2, h3, h4, h5, h6, p, body {
   font-family: "TimesNewRomanPS-ItalicMT", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
   /*font-family: "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;*/
   -webkit-font-smoothing: initial;
