--- a/markdown.css
+++ b/markdown.css
@@ -140,19 +140,13 @@ audio, canvas, video {
 /* 要注意表单元素并不继承父级 font 的问题 */
 /*body, button, input, select, textarea {
   font: 300 1em/1.8 "TimesNewRomanPS-ItalicMT", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
-}
-body {
-  font-family: "TimesNewRomanPS-ItalicMT", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
-  -webkit-font-smoothing: initial;
-  font-weight: 100;
-  color: var(--text-color);
-  line-height: 1.35; 
-  font-variant-numeric: lining-nums;
-  margin-bottom: 1em;
 }*/
 
+body {
+  font-family: "TimesNewRomanPS-ItalicMT", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
+}
 
-h1, h2, h3, h4, h5, h6, p, body {
+h1, h2, h3, h4, h5, h6  {
   font-family: "TimesNewRomanPS-ItalicMT", "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;
   /*font-family: "PingFang SC", "Lantinghei SC", "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", sans;*/
   -webkit-font-smoothing: initial;
